# reddit_image_downloader_rusty

./: .gitignore  Cargo.toml  README.md  config.toml
.github/workflows/: release.yml  rust-clippy.yml
src/: image_file.rs  main.rs  subreddit.rs
