[package]
name = "reddit_image_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] } # reqwest with JSON and streaming support
tokio = { version = "1.27", features = ["full"] } # for our async runtime
futures = "0.3" # For working with futures, streams
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
indicatif = { version = "0.17", features = ["improved_unicode"] }
clap = { version = "4.2", features = ["derive"] }
once_cell = "1.18" # For static initialization of HTTP client
